fixed animation on iphone se

--- a/styles/main.css
+++ b/styles/main.css
@@ -405,4 +405,27 @@ body {
   .options {
     margin-top: unset;
   }
+
+  @keyframes resizeLogo {
+    0% {
+      max-width: 100%;
+      max-height: 100%;
+      opacity: 0;
+    }
+
+    50% {
+      opacity: 0;
+    }
+    100% {
+      background-color: unset;
+      max-width: 67px;
+    max-height: 54px;
+      opacity: 1;
+      margin-top: unset;
+      margin-left: unset;
+      top: 30px;
+      left: 30px;
+      visibility: visible;
+    }
+  }
 }
